<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="20dp"
    android:orientation="vertical"
    android:background="@color/share_bottom_sheet_dialog_bg_color">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:textColor="@color/white"
        style="@style/Theme.MovieApp.HeaderTextView"
        android:text="@string/share_modal_sheet_dialog_header" />
    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            style="?android:attr/buttonBarStyle"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                style="?android:attr/buttonBarButtonStyle"
                android:layout_marginStart="10dp"
                android:id="@+id/copyLinkBtn"
                android:layout_width="wrap_content"
                app:backgroundTint="@color/white"
                android:background="@drawable/outlined_button_background"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:drawableEnd="@drawable/ic_copy"
                android:textSize="12sp"
                android:text="@string/share_bottom_sheet_dialog_copy_link_text" />

            <Button
                android:id="@+id/sendLinkWithWhatsappBtn"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_marginStart="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                app:backgroundTint="@color/white"
                android:textSize="12sp"
                android:drawableEnd="@drawable/ic_whatsapp"
                android:background="@drawable/outlined_button_background"
                android:text="@string/share_bottom_sheet_dialog_send_link_with_whatsapp_text" />

            <Button
                android:id="@+id/sendLinkWithOtherAppsBtn"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_marginStart="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                app:backgroundTint="@color/white"
                android:textSize="12sp"
                android:background="@drawable/outlined_button_background"
                android:text="@string/share_bottom_sheet_dialog_send_with_other_apps"/>
        </LinearLayout>
    </HorizontalScrollView>


</LinearLayout>