<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.screen.movie_detail.MovieDetailFragment">
    <TextView
        android:id="@+id/errorMessageTxt"
        style="@style/Theme.MovieApp.HeaderTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:textSize="32sp"
        android:text="@string/no_data_error_message"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
        <ProgressBar
            android:id="@+id/loadingProgressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ScrollView
            android:id="@+id/scrollView2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.pierfrancescosoffritti.androidyoutubeplayer.core.player.views.YouTubePlayerView
                    android:id="@+id/youtubePlayerView"
                    android:layout_marginTop="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="25dp"
                    android:layout_marginTop="10dp"
                    android:orientation="vertical">
                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        >
                        <TextView
                            android:id="@+id/movieTitleTxt"
                            style="@style/Theme.MovieApp.HeaderTextView"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:text=""
                            android:textAlignment="textStart"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toStartOf="@+id/favouriteCheckbox"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <CheckBox
                            android:id="@+id/favouriteCheckbox"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:button="@drawable/favourite_checkbox"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />
                    </androidx.constraintlayout.widget.ConstraintLayout>
                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_marginTop="20dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <ImageView
                            android:id="@+id/timeImg"
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:contentDescription="icon"
                            android:scaleType="centerCrop"
                            android:src="@drawable/ic_time"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />
                        <TextView
                            android:id="@+id/movieRuntimeTxt"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            style="@style/Theme.MovieApp.ContentStyle"
                            android:textFontWeight="400"
                            android:text="157 minutes"
                            app:layout_constraintBottom_toBottomOf="@+id/timeImg"
                            app:layout_constraintStart_toEndOf="@+id/timeImg"
                            app:layout_constraintTop_toTopOf="@+id/timeImg" />
                        <ImageView
                            android:id="@+id/calendarImg"
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:contentDescription="icon"
                            android:scaleType="centerCrop"
                            android:src="@drawable/ic_calendar"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toStartOf="@id/movieReleaseDateTxt"
                            app:layout_constraintTop_toTopOf="parent"
                            android:layout_marginEnd="10dp"
                            />
                        <TextView
                            android:id="@+id/movieReleaseDateTxt"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            style="@style/Theme.MovieApp.ContentStyle"
                            android:layout_marginStart="10dp"
                            android:text="2023-11-15"
                            app:layout_constraintBottom_toBottomOf="@+id/calendarImg"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toTopOf="@+id/calendarImg" />
                    </androidx.constraintlayout.widget.ConstraintLayout>
                    <TextView
                        android:layout_marginTop="20dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/Theme.MovieApp.SubtitleStyle"
                        android:text="@string/genres_subtitle"/>
                    <com.google.android.flexbox.FlexboxLayout
                        android:layout_marginTop="10dp"
                        android:id="@+id/genresFlexboxLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:flexDirection="row"
                        app:flexWrap="wrap"
                        app:justifyContent="space_between"
                        app:alignItems="stretch">
                    </com.google.android.flexbox.FlexboxLayout>
                    <TextView
                        android:layout_marginTop="20dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/Theme.MovieApp.SubtitleStyle"
                        android:text="@string/overview_subtitle"/>
                    <TextView
                        android:layout_marginTop="10dp"
                        android:id="@+id/movieOverviewTxt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/Theme.MovieApp.ThinContentStyle"
                        android:textSize="14sp"/>
                    <LinearLayout
                        android:layout_marginTop="10dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_gravity="end">
                        <ImageButton
                            android:id="@+id/addWatchListBtn"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/ic_add"
                            android:background="@drawable/circle_button_background"
                            android:backgroundTint="@color/add_watch_list_button_bg_color"
                            android:text="@string/add_watch_list_button_text"
                            android:padding="5dp"
                            android:layout_marginEnd="20dp"
                            android:contentDescription="Add watch list"
                            />

                        <ImageButton
                            android:id="@+id/shareBtn"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/ic_share"
                            android:text="@string/share_button_text"
                            android:background="@drawable/circle_button_background"
                            android:backgroundTint="@color/share_button_bg_color"
                            android:contentDescription="share trailer url"
                            android:padding="5dp"
                            />
                    </LinearLayout>
                    <TextView
                        android:id="@+id/similarMoviesTxt"
                        android:layout_marginTop="20dp"
                        android:visibility="gone"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/Theme.MovieApp.SubtitleStyle"
                        android:text="@string/similar_contents_subtitle"/>

                </LinearLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:layout_marginTop="10dp"
                    android:id="@+id/similarContentsRecyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    />


            </LinearLayout>
        </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>

